--- a/index.html
+++ b/index.html
@@ -3,20 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web Develop</title>
+    <title>Developer Profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css file/style.css">
 </head>
 <body>
     <header>
 
     </header>
-    <main>
-        <section>
-            <div>
+    <main class="azeret-mono-normal">
+        <!-- start future-developer section -->
+        <section class="future-developer">
+            <div class="developer-section">
                 <img src="assets/Group.png" alt="">
-                <h1>"In the near future, I hope to become a Developer."</h1>
-                <p>To become a Web Developer, you should have an understanding of HTML, CSS, and JavaScript. It’s also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give you the foundation and logic for communicating with programming languages.</p>
-                <button>Contact with me</button>
+                <h1 class="developer-title">"In the near future, I hope to become a Developer."</h1>
+                <p class="developer-descrition">To become a Web Developer, you should have an understanding of HTML, CSS, and JavaScript. It’s also recommended to learn about CSS and CSS frameworks. Developing these fundamental web development skills will give you the foundation and logic for communicating with programming languages.</p>
+                <button class="developer-btn">Contact with me</button>
             </div>
+        </section>
+        <!-- start web development secton -->
+        <section class="why-web-development">
+            <section class="web-development">
+                <section class="development-title-bar">
+                    <div>
+                        <h1 id="development-title">Why Web Development??</h1>
+                        <p id="development-description">Web development combines my passion for technology and creativity, allowing me to solve problems and continuously learn while making a tangible impact. Plus, it offers great flexibility and opportunities for collaboration.</p>
+                    </div>
+                </section>
+                <section class="development-colum">
+                    <div class="colum-one colum-two">
+                        <h3 class="experience-title">I will Do Coding and Change The World</h3>
+                        <p class="experience-description">By mastering coding, I aim to develop innovative solutions that address global challenges, from healthcare and education to environmental sustainability. My goal is to use technology to drive meaningful, positive change and improve lives around the world.</p>
+                        <button><a class="btn-primary" href="">Learn More</a></button>
+                    </div>
+                    <div>
+                        <img src="assets/Layer_1.png" alt="">
+                    </div>
+                </section>
+                <section class="development-colum">
+                    <div>
+                        <img src="assets/Group 3.png" alt="">
+                    </div>
+                    <div class="colum-one colum-two">
+                        <h3 class="experience-title">I will help People by creating Modern Web System</h3>
+                        <p class="experience-description">I am committed to developing cutting-edge web systems that enhance user experience and solve real-world problems. My goal is to build modern, efficient, and accessible digital solutions that empower individuals and organizations, making their interactions with technology seamless and impactful.</p>
+                        <button><a class="btn-primary" href="">Learn More</a></button>
+                    </div>
+                </section>
+                <section class="development-colum">
+                    <div class="colum-one colum-three">
+                        <h3 class="experience-title">I will Do Coding and Change The World</h3>
+                        <p class="experience-description">By mastering coding, I aim to develop innovative solutions that address global challenges, from healthcare and education to environmental sustainability. My goal is to use technology to drive meaningful, positive change and improve lives around the world.</p>
+                        <button><a class="btn-primary" href="">Learn More</a></button>
+                    </div>
+                    <div>
+                        <img src="assets/Group 4.png" alt="">
+                    </div>
+                </section>
+            </section>
+            <section>
+                <div>
+                    <h3>My Inspiration</h3>
+                    <p></p>
+                </div>
+
+            </section>
         </section>
     </main>
     <footer>
